Remove Augmented Nature references, update to OpenPharma
- Updated LICENSE copyright to OpenPharma Contributors
- Updated README attribution to OpenPharma organization
- Updated package.json author field
- Removed backup files

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "compounds",
     "ncbi"
   ],
-  "author": "Augmented Nature <hello@augmentednature.ai>",
+  "author": "OpenPharma Contributors",
   "license": "MIT",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^0.6.0",
